Made the required changes to Assignment-1

--- a/src/Assignment-1/assignment1.html
+++ b/src/Assignment-1/assignment1.html
@@ -9,12 +9,40 @@
 </head>
 
 <body>
-	<div id="container">
+	<div class="container">
 
 	<!-- This is just a comment. Ignore this line.-->
 	<!-- Start your code from here -->
-	
-	
+		
+		<div class="row row1">
+			<div class="col col1 one">
+				<ul class="list1">
+					<li>Scripting Language</li>
+					<li>Markup Language</li>
+					<li>Programming Language</li>
+					<ul class="list2">
+						<li>Python</li>
+						<li>JavaScript</li>
+					</ul>
+				</ul>
+			</div>
+			
+			<div class="col col2 two">
+				<img id="prog-language" src="images/programming-language.jpg" alt="Most Popular Programming Languages">
+			</div>
+		</div>
+		
+
+		<div class="row row2">
+			<div class="col col1 three">
+				<img id="coder" src="images/coder.jpg" alt="">
+			</div>
+
+			<div class="col col2 four">
+				<h1>Stay Hungry, Stay Foolish, Keep Grinding</h1>
+			</div>
+		</div>
+
 	<!-- End your code -->
 
 	</div>
