Added the required changes to Assignment-1

--- a/src/Assignment-1/assignment1.html
+++ b/src/Assignment-1/assignment1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<div id="container">
 
 	<!-- This is just a comment. Ignore this line.-->
 	<!-- Start your code from here -->
