Initial Comnplete Of Assignment-3

--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -13,6 +13,30 @@
 
 	<!-- Start your code from here -->
 	
+		<div class="outer-top">
+			<div class="inner-left">
+				<h1 class="first">Have You Seen Ghost🎃</h1>
+				<p>One midnight I was very hungry so I was sneaking into my kitchen to feed my hungry tummy, I cooked some eggs and as I was about to have them and suddenly I heard somebody calling me...To Be Continued</p>
+				<button>See Ghost</button>
+			</div>
+
+			<div class="inner-right">
+				<iframe src="https://en.wikipedia.org/wiki/Wikipedia" frameborder="0"></iframe>
+			</div>
+		</div>
+
+		<div class="outer-bottom">
+			<div class="inner-top">
+				<h1 class="second">Want to Meet Ghost👻</h1>
+				<p>I was very scared by the sound as I was alone in my home. But the sound was getting into my ears again and again and I was sacred then door banged open and...To Be Continued</p>
+				<button>Meet Ghost</button>
+			</div>
+
+			<div class="inner-bottom">
+				<iframe src="https://www.dictionary.com/" frameborder="0"></iframe>
+			</div>
+		</div>
+
 	<!-- End your code -->
 
 	</div>
