--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
+	<link rel="stylesheet" type ="text/css" href="reset.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+	<link rel="stylesheet" type = "text/css" href="assignment4.css">
 	<script src="bundle.js" type="text/javascript"></script>
 </head>
 
@@ -13,6 +16,54 @@
 
 	<!-- Start your code from here -->
 	
+	<header>
+		<h1></h1>
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li>Things</li>
+				<li>Stuff</li>
+			</ul>
+		</nav>
+	</header>
+
+	<section id="hero">
+		<h2>A Site About Some Dogs</h2>
+		<img src="images/dog1-sq.jpg" alt="hero dog"/>
+		<a class="btn" href="http://corgis-in-space.tumblr.com/" target="_blank">What are Dogs</a>
+	</section>
+
+	<section>
+		<article class="three-col">
+			<h3>Home</h3>
+			<img src="images/dog2-sq.jpg" alt="first image">
+			<p>The dog is a pet animal. A dog has sharp teeth so that it can eat flesh very easily, it has four legs, two ears, two eyes, a tail, a mouth, and a nose. It is a very clever animal and is very useful in catching thieves. It runs very fast, barks loudly and attacks the strangers.</p>
+			<a class="btn" href="https://en.wikipedia.org/wiki/Dog">Go Home</a>
+		</article>
+		<article class="three-col">
+			<h3>Things</h3>
+			<img src="images/dog3-sq.jpg" alt="second image"/>
+			<p>Your canine companion can offer comfort and ease your worries. Multiple studies show that dogs and therapy dogs help alleviate stress and anxiety. Even just petting a familiar dog lowers blood pressure, heart rate, slows breathing, and relaxes muscle tension.</p>
+			<a class="btn" href="http://www.dog-adoption-and-training-guide.com/about-dogs.html">More Things</a>
+		</article>
+		<article class="three-col">
+			<h3>Stuff</h3>
+			<img src="images/dog4-sq.jpg" alt="third image"/>
+			<p>Dog owners generally have a stronger immune system, helping them to stay well and spend less time getting over sickness and bugs. ... Dogs provide us with a sense of emotional wellbeing thanks to the unconditional love they give, which is why they're also great company and comfort for people who live alone.</p>
+			<a class="btn" href="http://www.livescience.com/13305-facts-dog-breeds-genetics-pets.html">Some Stuff</a>
+		</article>
+	</section>
+
+	<footer>
+		<h4>Learn About Dogs Online</h4>
+		<ul>
+		  <li><img src="images/facebook.svg"/></li>
+		  <li><img src="images/twitter.svg"/></li>
+		  <li><img src="images/instagram.svg"/></li>
+		  <li><img src="images/linkedin.svg"/></li>
+		</ul>
+		<a class="link" href="https://github.com/turingschool-examples/introductory-static-site" target="_blank">See this on GitHub</a>
+	  </footer>	  
 
 	<!-- End your code -->
 
@@ -32,7 +83,7 @@
 	// set the attributes for link element 
 	link.rel = 'stylesheet'; 
 	link.type = 'text/css';
-	link.href = './assignment4.css?v='+ new Date().getTime(); 
+	link.href = './assignment4.css?v='+ new Date().getTime();
 	// Append link element to HTML head
 	head.appendChild(link); 
 	/* DO NOT EDIT THIS CODE- WRITTERN TO PREVENT CSS CACHING */	  
