--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -13,6 +13,27 @@
 
 	<!-- Start your code from here -->
 	
+	<div class="card">
+		<div class="images">
+			<img class="image-1" src="images/plant-1.png" alt="Coconut Plant">
+		</div>
+		<div class="text-content">
+			<h1>A leafy one</h1>
+			<p>Blossom dorset health scabius ipsum. Grape hyacinth bee balm bird of paradise obedient plant african lily lily. Spring floxgove florist's nightmare primrose</p>
+			<button>SO LEAFY</button>
+		</div>
+	</div>
+
+	<div class="card">
+		<div class="images">
+			<img class="image-2" src="images/plant-2.png" alt="Small Cactus Plants">
+		</div>
+		<div class="text-content">
+			<h1>Some pointy ones</h1>
+			<p>Florem ipsum sugarbush bloom red rose waxflower coneflower ginger. Saxifrage forget-me-not obedient plant</p>
+			<button>I'LL TAKE 10</button>
+		</div>
+	</div>
 
 	<!-- End your code -->
 
